--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 
-ccxt
-numpy
-pandas
-pandas-ta
-python-telegram-bot
-python-dotenv
+ccxt==4.4.75
+numpy==2.0.1
+pandas==2.2.3
+pandas-ta==0.3.14b0
+python-telegram-bot==22.0
+python-dotenv==1.1.0
